<resources>
    <string name="app_name">番剧笔记</string>

    <string name="fragment_front">首页</string>
    <string name="fragment_calendar">放送</string>
    <string name="fragment_home">主页</string>
    <string name="fragment_search">搜索</string>
    <string name="fragment_me">我的</string>

    <string name="activity_subject">作品</string>
    <string name="activity_character">角色</string>
    <string name="activity_person">人物</string>
    <string name="activity_search">搜索</string>
    <string name="activity_login">授权</string>
    <string name="activity_related_web">相关链接</string>

    <string name="type_anime">动画</string>
    <string name="type_book">书籍</string>
    <string name="type_music">音乐</string>
    <string name="type_game">游戏</string>
    <string name="type_real">影剧</string>

    <string name="type_person_artist">艺术家</string>
    <string name="type_person_director">导演</string>
    <string name="type_person_seiyu">声优</string>
    <string name="type_person_actor">演员</string>
    <string name="type_person_producer">制作人员</string>
    <string name="type_person_illustrator">绘师</string>
    <string name="type_person_mangaka">漫画家</string>
    <string name="type_person_writer">作家</string>

    <string name="search_hint">关键字</string>
    <string name="search_advance">高级</string>
    <string name="search_advance_search">搜索</string>
    <string name="search_advance_none">无高级选项</string>

    <string name="search_advance_subject">作品</string>
    <string name="search_advance_character">角色</string>
    <string name="search_advance_person">人物</string>

    <string name="search_sort_match">匹配</string>
    <string name="search_sort_score">分数</string>
    <string name="search_sort_heat">热度</string>
    <string name="search_sort_rank">排名</string>
    <string name="search_nsfw">NSFW</string>

    <string name="search_range">%s - %s</string>
    <string name="search_date">日期范围</string>
    <string name="search_date_set">设置</string>
    <string name="search_date_remove">移除</string>
    <string name="search_date_before">%s之前</string>
    <string name="search_date_after">%s之后</string>
    <string name="search_score">评分范围</string>
    <string name="search_score_greater">大于%.1f</string>
    <string name="search_score_less">小于%.1f</string>
    <string name="search_rank">排名范围</string>
    <string name="search_rank_above">高于%s</string>
    <string name="search_rank_below">低于%s</string>
    <string name="search_error">设置颠倒</string>

    <string name="search_tag_hint">输入标签名，点击标签移除</string>
    <string name="search_tag_add">添加</string>
    <string name="search_tag_error">标签已存在</string>

    <string name="subject_rating_score">%.1f</string>
    <string name="subject_rating_total">%d人评分</string>

    <string name="subject_info">信息</string>
    <string name="subject_summary">简介</string>
    <string name="subject_collection">收藏</string>
    <string name="subject_episode">章节</string>
    <string name="subject_character">角色</string>
    <string name="subject_related">相关</string>
    <string name="subject_web">链接</string>

    <string name="character_info">信息</string>
    <string name="character_summary">简介</string>
    <string name="character_related">相关</string>
    <string name="character_web">链接</string>

    <string name="person_info">信息</string>
    <string name="person_summary">简介</string>
    <string name="person_related">相关</string>
    <string name="person_character">角色</string>
    <string name="person_web">链接</string>

    <string name="info_ori_name">原名</string>
    <string name="info_person_hint">相关人物</string>

    <string name="collection_null">未收藏</string>
    <string name="collection_wish">想%s</string>
    <string name="collection_doing">在%s</string>
    <string name="collection_collect">%s过</string>
    <string name="collection_on_hold">搁置</string>
    <string name="collection_dropped">抛弃</string>

    <string name="collection_watch">看</string>
    <string name="collection_read">读</string>
    <string name="collection_listen">听</string>
    <string name="collection_play">玩</string>

    <string name="collection_eps">%d / %d</string>

    <string name="collection_info">收藏</string>

    <string name="collection_comment_hint">请输入评论</string>
    <string name="collection_comment_limit">%d / %d</string>
    <string name="collection_error_comment_exceeded">评论超出字数限制</string>

    <string name="dialog_cancel">取消</string>
    <string name="dialog_submit">确认</string>

    <string name="login_email_hint">Email地址</string>
    <string name="login_password_hint">密码</string>
    <string name="login_code_hint">验证码</string>
    <string name="login_submit">登录</string>
    <string name="auth_error">错误</string>

    <string name="me_name_hint">点击提供授权</string>

    <string name="web_bangumi">Bangumi 番组计划</string>
    <string name="web_pixiv">Pixiv</string>
    <string name="web_mikanime">蜜柑计划</string>
    <string name="web_dmhy">動漫花園</string>

    <string name="episode_info">首播: %s  /  时长: %s</string>
    <string name="episode_type_main">本篇</string>
    <string name="episode_type_sp">特别篇</string>
    <string name="episode_type_op">片头</string>
    <string name="episode_type_ed">片尾</string>
    <string name="episode_type_pv">预告</string>
    <string name="episode_type_mad">MAD</string>
    <string name="episode_type_other">其他</string>

    <string name="token_clear">Token已清除</string>

</resources>