<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_subject"
    app:startDestination="@id/nav_fragment_subject">

    <fragment
        android:id="@+id/nav_fragment_subject"
        android:name="com.phantom.banguminote.detail.subject.SubjectFragment"
        android:label="@string/activity_subject"
        tools:layout="@layout/fragment_subject" />

    <action
        android:id="@+id/action_nav_to_activity_subject"
        app:destination="@id/nav_activity_subject" />

    <activity
        android:id="@+id/nav_activity_subject"
        android:name="com.phantom.banguminote.detail.subject.SubjectActivity"
        android:label="@string/activity_subject"
        tools:layout="@layout/activity_subject" />

    <action
        android:id="@+id/action_nav_to_activity_character"
        app:destination="@id/nav_activity_character" />

    <activity
        android:id="@+id/nav_activity_character"
        android:name="com.phantom.banguminote.detail.character.CharacterActivity"
        android:label="@string/activity_character"
        tools:layout="@layout/activity_character" />

    <action
        android:id="@+id/action_nav_to_activity_person"
        app:destination="@id/nav_activity_person" />

    <activity
        android:id="@+id/nav_activity_person"
        android:name="com.phantom.banguminote.detail.person.PersonActivity"
        android:label="@string/activity_person"
        tools:layout="@layout/activity_person" />

    <action
        android:id="@+id/action_nav_to_activity_search"
        app:destination="@id/nav_activity_search" />

    <activity
        android:id="@+id/nav_activity_search"
        android:name="com.phantom.banguminote.search.SearchActivity"
        android:label="@string/activity_search"
        tools:layout="@layout/activity_search" />

    <action
        android:id="@+id/action_nav_to_activity_related_web"
        app:destination="@id/nav_activity_related_web" />

    <activity
        android:id="@+id/nav_activity_related_web"
        android:name="com.phantom.banguminote.detail.web.RelatedWebViewActivity"
        android:label="@string/activity_related_web"
        tools:layout="@layout/activity_web_view" />

</navigation>