<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_person"
    app:startDestination="@id/nav_fragment_person">

    <fragment
        android:id="@+id/nav_fragment_person"
        android:name="com.phantom.banguminote.detail.person.PersonFragment"
        android:label="@string/activity_person"
        tools:layout="@layout/fragment_person" />

    <action
        android:id="@+id/action_nav_to_activity_subject"
        app:destination="@id/nav_activity_subject" />

    <activity
        android:id="@+id/nav_activity_subject"
        android:name="com.phantom.banguminote.detail.subject.SubjectActivity"
        android:label="@string/activity_subject" />

    <action
        android:id="@+id/action_nav_to_activity_character"
        app:destination="@id/nav_activity_character" />

    <activity
        android:id="@+id/nav_activity_character"
        android:name="com.phantom.banguminote.detail.character.CharacterActivity"
        android:label="@string/activity_character" />

</navigation>