<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_fragment_home">


    <fragment
        android:id="@+id/nav_fragment_front"
        android:name="com.phantom.banguminote.front.FrontFragment"
        android:label="@string/fragment_front"
        tools:layout="@layout/fragment_front">
        <!--<action
            android:id="@+id/action_nav_list_to_nav_activity_work_detail"
            app:destination="@id/nav_activity_anime_detail" >
            <argument
                android:name="workId"
                android:defaultValue="0"
                app:argType="integer" />
        </action>-->
    </fragment>

    <fragment
        android:id="@+id/nav_fragment_home"
        android:name="com.phantom.banguminote.home.HomeFragment"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fragment_me"
        android:name="com.phantom.banguminote.me.MeFragment"
        android:label="@string/fragment_me"
        tools:layout="@layout/fragment_me">

    </fragment>

    <fragment
        android:id="@+id/nav_fragment_calendar"
        android:name="com.phantom.banguminote.front.calendar.CalendarFragment"
        android:label="临时首页"
        tools:layout="@layout/fragment_calendar">

        <action
            android:id="@+id/action_nav_to_activity_subject"
            app:destination="@id/nav_activity_subject"/>

    </fragment>

    <!--<activity
        android:id="@+id/nav_activity_anime_detail"
        android:name="name.phantom.animenotes.list.WorkDetailActivity"
        android:label="@string/activity_anime_detail">
    </activity>-->
    <activity
        android:id="@+id/nav_activity_subject"
        android:name="com.phantom.banguminote.subject.SubjectActivity"
        android:label="@string/activity_subject" />

</navigation>