<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_background"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/search_date"
            android:textColor="@color/text_light"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:clipToPadding="false"
            android:paddingHorizontal="16dp"
            android:paddingVertical="32dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAfter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/btAfter"
                app:layout_constraintEnd_toStartOf="@id/btAfter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btAfter"
                tools:text="-之后" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btAfter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/theme_background"
                android:textColor="@color/text_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/search_date_set" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBefore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/btBefore"
                app:layout_constraintEnd_toStartOf="@id/btBefore"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btBefore"
                tools:text="-之前" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btBefore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/theme_background"
                android:textColor="@color/text_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btAfter"
                tools:text="@string/search_date_set" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dialog_cancel"
                android:textColor="@color/text_dark" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/theme_background"
                android:text="@string/dialog_submit"
                android:textColor="@color/text_light" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>